# swb

./: .gitignore  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  progress.md  pyproject.toml  sitemap.xml  todo.md
.claude/: settings.local.json
.github/workflows/: docs.yml
about/license/: index.html
about/resources/: index.html
api/client/: index.html
api/models/: index.html
api/overview/: index.html
api/profiles/: index.html
development/code-quality/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: README.md  index.md
docs/about/: license.md  resources.md
docs/api/: client.md  models.md  overview.md  profiles.md
docs/development/: code-quality.md  contributing.md  testing.md
docs/user-guide/: advanced.md  cli.md  getting-started.md  installation.md  profiles.md  tui.md
examples/: basic_usage.py  faceted_search.py
ref/: api.md  architecture.md  cli.md  skill.md  testing.md
search/: search_index.json
src/swb/: __init__.py  api.py  cli.py  exceptions.py  models.py  profiles.py  tui.py
tests/: README.md  __init__.py  test_api.py  test_api_validation.py  test_cli.py  test_edge_cases.py  test_integration.py  test_models.py  test_profiles.py  test_rate_limiting.py
user-guide/advanced/: index.html
user-guide/cli/: index.html
user-guide/getting-started/: index.html
user-guide/installation/: index.html
user-guide/profiles/: index.html
user-guide/tui/: index.html
